--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,6 +38,9 @@ question = "0.2.2"
 spinners = "4.1.0"
 colored = "2.1.0"
 
+# Interactive Command Line
+rustyline = "14.0.0"
+
 # Logging
 log = "0.4.21"
 env_logger = "0.11.3"
