chore: update repository URLs in metadata and installation instructions to reflect correct ownership

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,8 +5,8 @@ edition = "2021"
 description = "A fast, intelligent CLI tool that generates conventional commit messages using AI"
 authors = ["Sanket <sanket@example.com>"]
 license = "MIT"
-repository = "https://github.com/sanket08/commitcraft"
-homepage = "https://github.com/sanket08/commitcraft"
+repository = "https://github.com/san0808/commitcraft"
+homepage = "https://github.com/san0808/commitcraft"
 documentation = "https://docs.rs/commitcraft"
 readme = "README.md"
 keywords = ["git", "commit", "ai", "conventional-commits", "cli"]
